Move search bar to align correctly on Home Page

--- a/react-app/src/styles/global.css
+++ b/react-app/src/styles/global.css
@@ -424,10 +424,7 @@ ul {
 }
 
 .search-container {
-  position: absolute;
-  top: 65%;
-  left: 40%;
-  width: 600px;
+
 }
 
 .gene-search {
